# chip8c

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENCE  README.md
src/: address.rs  args.rs  argument.rs  assembler.rs  error.rs  grammar.pest  instruction.rs  main.rs  parser.rs  register.rs
test_files/: instructions.asm  labels.asm
