[package]
name = "chip8c"
description = "Assembles CHIP-8 files to binary"
version = "0.1.0"
authors = ["Keating Reid <keating.reid@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.31"
